# portfolio

./: Makefile  README.md  SPEC.md
.claude/skills/doc-sync/: SKILL.md
.claude/skills/test-coverage/: SKILL.md
.claude/skills/ui-design/: SKILL.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/rag/: pipeline.py
backend/app/routes/: chat.py
backend/scripts/: build_index.py
backend/tests/: conftest.py  test_chat.py  test_health.py  test_rag.py
docs/: architecture.md  chatbot-rag.md  deployment.md  design-system.md  resume.txt  testing.md
frontend/: package-lock.json  package.json  vitest.config.mts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/projects/[slug]/: page.tsx
frontend/components/chatbot/: ChatInput.tsx  ChatMessage.tsx  ChatbotWidget.tsx
frontend/components/home/: AboutSection.tsx  ContactSection.tsx  FilterBar.tsx  Hero.tsx  ProjectCard.tsx  ProjectsSection.tsx
frontend/components/layout/: Footer.tsx  Header.tsx  ScanlineOverlay.tsx  Section.tsx
frontend/components/projects/: ProjectDetail.tsx  mdxComponents.tsx
frontend/components/ui/: Button.tsx  Card.tsx  FadeIn.tsx  Tag.tsx
frontend/content/projects/: ai-music-gen.mdx  baby-names.mdx  diamonds-price.mdx  nietzsche-chat.mdx
frontend/data/: projects.ts
